# flask-langchain-starter

./: .gitignore  README.md  justfile  pyproject.toml
fe/chatgpt-minimal/: docker-compose.yml
fe/chatgpt-minimal/src/components/ChatGPT/: MessageItem.tsx  SendBar.tsx  index.tsx  interface.ts  useChatGPT.ts
fe/chatgpt-minimal/src/models/: index.ts
fe/chatgpt-minimal/src/pages/api/: chat-completion.ts
notebooks/: agent.ipynb  agent_chat.ipynb  chat.ipynb  prompt.ipynb
src/: server.py
